hphp/test/zend/good/ext/pcntl/tests/001.php.skipif
<?php
	if (!extension_loaded("pcntl")) print "skip"; 
	elseif (!function_exists("posix_kill")) print "skip posix_kill() not available";
?>