hphp/test/zend/bad/tests/basic/rfc1867_max_file_uploads_empty_files_debug.php.skipif
<?php if(!function_exists("leak")) print "skip only for debug builds"; ?>